Navigation Widget alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -87,13 +87,16 @@ body {
 
 .widget {
     &.extendednavigation {
-        display: inline-block;
+        display: block;
         position: relative;
         min-height: 51px;
         margin: 0;
+        float: left;
+        width: 78%;
         @media @tablet {
             position: relative;
             width: 100%;
+            float: none;
             margin: 0 auto;
             background-color: lighten(@color-swatch7,10%);
             min-height: 30px;
@@ -382,9 +385,10 @@ body {
 }  
 
 .desktop-basket-container {
-    display: inline-block;
+    display: block;
     float: right;
     width: auto;
+    margin: 0;
     .widget.ecombasket { /* DESKTOP NAV BAR */
         .ecombasket-pull {
             p, .basket-count {
